--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -3,10 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/primary">
+    android:background="@color/white">
 
     <com.airbnb.lottie.LottieAnimationView
-        android:layout_width="wrap_content"
+        android:id="@+id/s1"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:lottie_rawRes="@raw/auth"
         app:layout_constraintBottom_toBottomOf="parent"
