--- a/app/src/main/res/layout/progress_loading.xml
+++ b/app/src/main/res/layout/progress_loading.xml
@@ -4,6 +4,7 @@
     android:id="@+id/progress_background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layoutDirection="locale"
     android:background="#1aFFFFFF"
     android:layout_gravity="center"
     android:gravity="center"
