--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,73 +7,88 @@
 
     <fragment
         android:id="@+id/splashScreen"
-        android:name="com.hamza.authapp.ui.SplashScreen"
-        tools:layout="@layout/splash_screen"
-        android:label="SplashScreen" >
+        android:name="com.hamza.authapp.ui.splash.SplashScreen"
+        android:label="SplashScreen"
+        tools:layout="@layout/splash_screen">
         <action
-            app:enterAnim="@anim/slide_in_from_right"
-            app:exitAnim="@anim/slide_out_left"
-            app:popEnterAnim="@anim/slide_in_from_left"
-            app:popExitAnim="@anim/slide_out_right"
             android:id="@+id/action_splashScreen_to_logoutFragment"
-            app:destination="@id/logoutFragment" />
-        <action
+            app:destination="@id/logoutFragment"
             app:enterAnim="@anim/slide_in_from_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_from_left"
-            app:popExitAnim="@anim/slide_out_right"
+            app:popExitAnim="@anim/slide_out_right" />
+        <action
             android:id="@+id/action_splashScreen_to_loginFragment"
-            app:destination="@id/loginFragment" />
+            app:destination="@id/loginFragment"
+            app:enterAnim="@anim/slide_in_from_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_from_left"
+            app:popExitAnim="@anim/slide_out_right" />
     </fragment>
     <fragment
         android:id="@+id/logoutFragment"
-        tools:layout="@layout/logout_fragment"
-        android:name="com.hamza.authapp.ui.LogoutFragment"
-        android:label="LogoutFragment" />
+        android:name="com.hamza.authapp.ui.logout.LogoutFragment"
+        android:label="LogoutFragment"
+        tools:layout="@layout/logout_fragment" />
     <fragment
         android:id="@+id/loginFragment"
-        tools:layout="@layout/login_fragment"
         android:name="com.hamza.authapp.ui.login.LoginFragment"
-        android:label="LoginFragment" >
+        android:label="LoginFragment"
+        tools:layout="@layout/login_fragment">
         <action
-            app:enterAnim="@anim/slide_in_from_right"
-            app:exitAnim="@anim/slide_out_left"
-            app:popEnterAnim="@anim/slide_in_from_left"
-            app:popExitAnim="@anim/slide_out_right"
             android:id="@+id/action_loginFragment_to_forgetPasswordFragment"
-            app:destination="@id/forgetPasswordFragment" />
-        <action
+            app:destination="@id/forgetPasswordFragment"
             app:enterAnim="@anim/slide_in_from_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_from_left"
-            app:popExitAnim="@anim/slide_out_right"
+            app:popExitAnim="@anim/slide_out_right" />
+        <action
             android:id="@+id/action_loginFragment_to_logoutFragment"
-            app:destination="@id/logoutFragment" />
-        <action
+            app:destination="@id/logoutFragment"
             app:enterAnim="@anim/slide_in_from_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_from_left"
-            app:popExitAnim="@anim/slide_out_right"
+            app:popExitAnim="@anim/slide_out_right" />
+        <action
             android:id="@+id/action_loginFragment_to_signupFragment"
-            app:destination="@id/signupFragment" />
+            app:destination="@id/signupFragment"
+            app:enterAnim="@anim/slide_in_from_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_from_left"
+            app:popExitAnim="@anim/slide_out_right" />
+        <action
+            android:id="@+id/action_loginFragment_to_authWithPhoneFragment"
+            app:destination="@id/authWithPhoneFragment" />
     </fragment>
     <fragment
         android:id="@+id/forgetPasswordFragment"
-        tools:layout="@layout/forget_password_fragment"
         android:name="com.hamza.authapp.ui.login.ForgetPasswordFragment"
-        android:label="ForgetPasswordFragment" />
+        android:label="ForgetPasswordFragment"
+        tools:layout="@layout/forget_password_fragment" />
     <fragment
-        tools:layout="@layout/signup_fragment"
         android:id="@+id/signupFragment"
         android:name="com.hamza.authapp.ui.signup.SignupFragment"
-        android:label="SignupFragment" >
+        android:label="SignupFragment"
+        tools:layout="@layout/signup_fragment">
         <action
             android:id="@+id/action_signupFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
+        <action
+            android:id="@+id/action_signupFragment_to_authWithPhoneFragment"
+            app:destination="@id/authWithPhoneFragment" />
     </fragment>
     <fragment
         android:id="@+id/authWithPhoneFragment"
-        tools:layout="@layout/auth_with_phone_fragment"
         android:name="com.hamza.authapp.ui.signup.AuthWithPhoneFragment"
-        android:label="AuthWithPhoneFragment" />
+        android:label="AuthWithPhoneFragment"
+        tools:layout="@layout/auth_with_phone_fragment" >
+        <action
+            android:id="@+id/action_authWithPhoneFragment_to_otpFragment"
+            app:destination="@id/otpFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/otpFragment"
+        android:name="com.hamza.authapp.ui.signup.OtpFragment"
+        android:label="OtpFragment"
+        tools:layout="@layout/otp_fragment" />
 </navigation>
