--- a/app/src/main/res/layout/otp_fragment.xml
+++ b/app/src/main/res/layout/otp_fragment.xml
@@ -45,7 +45,7 @@
         app:layout_constraintTop_toBottomOf="@id/txt" />
 
     <Button
-        android:id="@+id/btn_login"
+        android:id="@+id/btn_confirm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/spacing_extra_large"
