--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/splashScreen">
+    app:startDestination="@id/loginFragment">
 
     <fragment
         android:id="@+id/splashScreen"
@@ -68,7 +68,11 @@
         android:id="@+id/forgetPasswordFragment"
         android:name="com.hamza.authapp.ui.login.ForgetPasswordFragment"
         android:label="ForgetPasswordFragment"
-        tools:layout="@layout/forget_password_fragment" />
+        tools:layout="@layout/forget_password_fragment" >
+        <action
+            android:id="@+id/action_forgetPasswordFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
+    </fragment>
     <fragment
         android:id="@+id/signupFragment"
         android:name="com.hamza.authapp.ui.signup.SignupFragment"
@@ -101,5 +105,11 @@
         <argument
             android:name="mobileNumber"
             app:argType="string" />
+        <argument
+            android:name="verificationId"
+            app:argType="string" />
+        <action
+            android:id="@+id/action_otpFragment_to_logoutFragment"
+            app:destination="@id/logoutFragment" />
     </fragment>
 </navigation>
