--- a/app/src/main/res/layout/otp_fragment.xml
+++ b/app/src/main/res/layout/otp_fragment.xml
@@ -44,6 +44,38 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txt" />
 
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/spacing_medium"
+        android:layoutDirection="locale"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/edt_otpCode">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/cairo_bold"
+            android:layoutDirection="locale"
+            android:paddingEnd="@dimen/spacing_too_small"
+            android:text="@string/didn_t_receive_the_otp"
+            android:textSize="@dimen/text_small" />
+
+
+        <TextView
+            android:id="@+id/txt_resendotp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/cairo_bold"
+            android:layoutDirection="locale"
+            android:text="@string/resend_otp"
+            android:textColor="@color/primary"
+            android:textSize="@dimen/text_small" />
+    </LinearLayout>
+
     <Button
         android:id="@+id/btn_confirm"
         android:layout_width="match_parent"
@@ -54,5 +86,5 @@
         android:textSize="@dimen/text_medium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edt_otpCode" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 </androidx.constraintlayout.widget.ConstraintLayout>
