--- a/app/src/main/res/values-ar/string.xml
+++ b/app/src/main/res/values-ar/string.xml
@@ -28,6 +28,9 @@
     <string name="didn_t_receive_the_otp">لم تستلم الرمز؟</string>
     <string name="resend_otp">إعادة إرسال الرمز</string>
     <string name="otp_sent">تم إرسال الرمز</string>
+    <string name="try_again">حاول مره أخري</string>
+    <string name="verification_success">تم التحقق بنجاح</string>
+
 
 </resources>
 
